--- a/.dockstore.yml
+++ b/.dockstore.yml
@@ -120,3 +120,6 @@ workflows:
 - name: CountTheBeans
   subclass: wdl
   primaryDescriptorPath: /wdl/pipelines/TechAgnostic/Utility/CountTheBeans.wdl
+- name: DystPeaker
+  subclass: wdl
+  primaryDescriptorPath: /wdl/pipelines/TechAgnostic/Utility/DystPeaker.wdl
