--- a/.dockstore.yml
+++ b/.dockstore.yml
@@ -96,3 +96,6 @@ workflows:
 - name: CleanupIntermediate
   subclass: wdl
   primaryDescriptorPath: /wdl/pipelines/TechAgnostic/Utility/CleanupIntermediate.wdl
+- name: FilterAnnotateVCF
+  subclass: wdl
+  primaryDescriptorPath: /wdl/pipelines/TechAgnostic/Annotation/FilterAnnotateVCF.wdl
