--- a/docker/lr-nanoplot/Dockerfile
+++ b/docker/lr-nanoplot/Dockerfile
@@ -1,5 +1,32 @@
 FROM python:3.9-buster
 
+ARG DEBIAN_FRONTEND=noninteractive
+RUN apt-get -qqy update --fix-missing && \
+    apt-get -qqy dist-upgrade && \
+    apt-get -qqy install --no-install-recommends \
+                 apt-transport-https \
+                 bedtools \
+                 ca-certificates \
+                 curl \
+                 gnupg \
+                 wget \
+                 zlib1g-dev && \
+    echo "deb [signed-by=/usr/share/keyrings/cloud.google.gpg] http://packages.cloud.google.com/apt cloud-sdk main" | tee -a /etc/apt/sources.list.d/google-cloud-sdk.list && \
+    curl https://packages.cloud.google.com/apt/doc/apt-key.gpg | apt-key --keyring /usr/share/keyrings/cloud.google.gpg  add - && \
+    apt-get -qqy update && \
+    apt-get -qqy install --no-install-recommends google-cloud-cli && \
+    gcloud config set core/disable_usage_reporting true && \
+    gcloud config set component_manager/disable_update_check true && \
+    gcloud config set metrics/environment github_docker_image && \
+    apt-get -qqy purge gnupg && \
+    apt-get -qqy clean && \
+    rm -rf /tmp/* \
+           /var/tmp/* \
+           /var/cache/apt/* \
+           /var/lib/apt/lists/* \
+           /usr/share/man/?? \
+           /usr/share/man/??_*
+
 ARG sha=e0028d85ec9e61f8c96bea240ffca65b713e3385
 RUN cd /opt/ && \
     git clone https://github.com/wdecoster/NanoPlot.git && \
