(sh_seq_kit) New workflows   * filter reads by length in a BAM   * collect some read quality stats from (length-filtered) FASTQ/BAM

--- a/.dockstore.yml
+++ b/.dockstore.yml
@@ -123,3 +123,9 @@ workflows:
 - name: DystPeaker
   subclass: wdl
   primaryDescriptorPath: /wdl/pipelines/TechAgnostic/Utility/DystPeaker.wdl
+- name: FASTQstats
+  subclass: wdl
+  primaryDescriptorPath: /wdl/pipelines/TechAgnostic/Utility/FASTQstats.wdl
+- name: FilterBamByLength
+  subclass: wdl
+  primaryDescriptorPath: /wdl/pipelines/TechAgnostic/Utility/FilterBamByLength.wdl
