New workflow to save files (avoid multiple calls to Finalize)

--- a/.dockstore.yml
+++ b/.dockstore.yml
@@ -141,3 +141,6 @@ workflows:
 - name: CollectBamFlagStats
   subclass: wdl
   primaryDescriptorPath: /wdl/pipelines/TechAgnostic/Utility/CollectBamFlagStats.wdl
+- name: SaveFilesToDestination
+  subclass: wdl
+  primaryDescriptorPath: /wdl/pipelines/TechAgnostic/Utility/SaveFilesToDestination.wdl
